Terraform_Task/c3-virtual-network.tf
resource "azurerm_virtual_network" "vnet"{
    name = "vnet"
    location = azurerm_resource_group.myrg.location
    resource_group_name = azurerm_resource_group.myrg.name
    address_space = ["10.0.0.0/16"]

}

resource "azurerm_subnet" "subnet-1"{
    name = "subnet-1"
    resource_group_name = azurerm_resource_group.myrg.name
    virtual_network_name = azurerm_virtual_network.vnet.name
    address_prefixes = ["10.0.1.0/24"]
}

resource "azurerm_subnet" "subnet-2"{
    name = "subnet-2"
    resource_group_name = azurerm_resource_group.myrg.name
    virtual_network_name = azurerm_virtual_network.vnet.name
    address_prefixes = ["10.0.2.0/24"]
}
